welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:25: error: not found: value c
		c match {
                ^